XSCOLIBRI-202: Two scrollbars in the Document Index Tree when the tree is expanded Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@27493 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1677,6 +1677,10 @@ input#tags {
 body .listGrid {
   border: none;
 }
+#XWEWrapper {
+  /* Fix double scrollbar in IE7&8 */
+  overflow: hidden !important;
+}
 
 /* -----------------------YUI Trees----------------------*/
 .ygtvitem table {
